fix: added overflow for html to prevent appearance of scroll bars in configuration when in high dpi

--- a/css/twitch_chat_config.css
+++ b/css/twitch_chat_config.css
@@ -6,6 +6,11 @@
     font-style: normal;
 }
 
+html
+{
+	overflow: hidden;
+}
+
 *
 {
 	outline: 0;
